# ComputerVision-Notes

./: README.md
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/chapters/opencv/: tutorials.doctree
docs/.doctrees/chapters/opencv/00_getting_started/: tutorials.doctree
docs/.doctrees/chapters/pcl/00_getting_started/: basics.doctree  tutorials.doctree
docs/.doctrees/chapters/pcl/tutorials/: IO.doctree  basics.doctree  filtering.doctree  recognition.doctree  segmentation.doctree  tutorials.doctree  visualization.doctree
docs/.doctrees/code/pcl/statistical_removal/: statistical_outlier.doctree
docs/_sources/chapters/opencv/: tutorials.rst.txt
docs/_sources/chapters/opencv/00_getting_started/: tutorials.rst.txt
docs/_sources/chapters/pcl/00_getting_started/: basics.rst.txt  tutorials.rst.txt
docs/_sources/chapters/pcl/tutorials/: visualization.rst.txt
docs/chapters/opencv/: tutorials.html
docs/chapters/opencv/00_getting_started/: tutorials.html
docs/chapters/pcl/00_getting_started/: basics.html  tutorials.html
docs/chapters/pcl/tutorials/: IO.html  basics.html  filtering.html  recognition.html  segmentation.html  tutorials.html  visualization.html
docs/code/pcl/statistical_removal/: statistical_outlier.html
src/: conf.py  index.rst
src/chapters/pcl/tutorials/: IO.rst  basics.rst  filtering.rst  recognition.rst  segmentation.rst
src/code/pcl/first_example/: CMakeLists.txt  first_example.cpp
